# simple-navier-fluid-sim

./: CMakeLists.txt  README.md
src/: navier_stokes.cpp
